--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,3 +16,6 @@ set -g status-right ""
 # window-statusの見た目を変更
 setw -g window-status-current-format '#[bg=colour2,fg=colour255] #I #W '
 setw -g window-status-format '#[fg=colour242] #I #W '
+
+# スクロールバッファの設定
+set -g history-limit 10000
