--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ setw -g status-style fg=colour255,bg=colour234
 set -g status-left ""
 
 # status-rightを非表示にする
-set -g status-right ""
+set -g status-right "Session: #S | Pane: #P"
 
 # window-statusの見た目を変更
 setw -g window-status-current-format '#[bg=colour2,fg=colour255] #I #W '
